taas wippi muutoksia

--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -383,6 +383,12 @@ Button_menu_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultV
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 MainMenu_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+Bullet_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+Enemy1_Rework_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 
 [EditorStartup]
 LastLevel=/Game/Maps/Player
@@ -423,8 +429,8 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/Enemy1_Rework.Enemy1_Rework
 OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
+OpenAssetsAtExit=/Game/Blueprints/Enemy1_Rework.Enemy1_Rework
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=213.000
@@ -1861,9 +1867,10 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Input
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Doors
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
@@ -3091,6 +3098,20 @@ Bullet_C.Collision=True
 Bullet_C.Input=True
 Bullet_C.Physics=True
 Bullet_C.Events=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Variable=True
+Enemy1_Rework_C.Default=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Bullet
@@ -3436,6 +3457,7 @@ MovieSceneSection="\"Object\" "
 ExitOptions_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 EdGraphNode_Comment="\"Object\" "
 AIPerceptionComponent="\"Object\" "
+ProjectileMovementComponent="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3459,6 +3481,7 @@ AIPerceptionComponent="\"Object\" "
 /Game/UI/UI_assets/Button_arrow.Button_arrow=1
 /Game/UI/ExitOptions.ExitOptions=1
 /Game/Blueprints/Bullet.Bullet=1
+/Game/Blueprints/Enemy1_Rework.Enemy1_Rework=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
