--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -418,6 +418,7 @@ MRUItem1=/Game/MainmenuMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SoundClassEditor
@@ -3122,6 +3123,16 @@ MRUItem6=/Game/Audio/Music/MasterMusic_Soundclass
 MRUItem7=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
 MRUItem8=/Game/UI/OptionsMenuWB
 MRUItem9=/Game/Maps/MainmenuMap
+MRUItem0=/Game/Maps/MainmenuMap
+MRUItem1=/Game/UI/MainMenu
+MRUItem2=/Game/Saves/Settingsave
+MRUItem3=/Game/Audio/Master
+MRUItem4=/Game/Audio/MasterSoundclassMIx
+MRUItem5=/Game/Audio/SFX/click-345983
+MRUItem6=/Game/UI/Button_menu
+MRUItem7=/Game/Audio/Music/MasterMusic_Soundclass
+MRUItem8=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
+MRUItem9=/Game/UI/OptionsMenuWB
 MRUItem10=/Game/UI/ExitOptions
 MRUItem11=/Game/Maps/Enemy1
 MRUItem12=/Game/UI/LevelSelectMenuWidget
