--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -200,8 +200,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 bIsThemePanelVisible=True
 
 [MRU]
-MRUItem0=/Game/Maps/MainmenuMap
-MRUItem1=/Game/Maps/Enemy1
+MRUItem0=/Game/Maps/Enemy1
+MRUItem1=/Game/Maps/MainmenuMap
 MRUItem2=/Game/StarterContent/Maps/Minimal_Default
 MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
 MRUItem4=/Game/StarterContent/Maps/StarterMap
@@ -407,17 +407,25 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.Def
 Settingsave_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+Enemy1_Rework_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/MainmenuMap
+LastLevel=/Game/Maps/Enemy1
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -427,7 +435,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=SoundClassEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
@@ -445,9 +452,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
 
 [RootWindow]
 ScreenPosition=X=272.000 Y=240.000
@@ -470,7 +474,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/Maps
 UNR========
-UNR=../../../../../../Users/s4tuel01/OneDrive - OSAO/Documents/GitHub/Stupid-inc-unreal-project/project/Content/Maps
+UNR=../../../../../../unreal(backup)/Stupid-inc-ROTF/project/Content/Maps
 BRUSH=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
 FBX=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
 FBXAnim=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
@@ -1885,6 +1889,9 @@ ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserDrawer.JumpMRU=/All/Game/Input
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Doors
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
@@ -3110,38 +3117,116 @@ SoundClass.Loading=True
 Settingsave_C.Default=True
 SoundWave.Curves=True
 SoundWave.Advanced=True
+Enemy1_Rework_C.TransformCommon=True
+Enemy1_Rework_C.Animation=True
+Enemy1_Rework_C.Mesh=True
+Enemy1_Rework_C.Tick=True
+Enemy1_Rework_C.Default=True
+Enemy1_Rework_C.ComponentTick=True
+Enemy1_Rework_C.Clothing=True
+Enemy1_Rework_C.Physics=True
+Enemy1_Rework_C.Collision=True
+Enemy1_Rework_C.LeaderPoseComponent=True
+Enemy1_Rework_C.Lighting=True
+Enemy1_Rework_C.AnimationRig=True
+Enemy1_Rework_C.Deformer=True
+Enemy1_Rework_C.SkinWeights=True
+Enemy1_Rework_C.Rendering=True
+Enemy1_Rework_C.HLOD=True
+Enemy1_Rework_C.Mobile=True
+Enemy1_Rework_C.RayTracing=True
+Enemy1_Rework_C.VirtualTexture=True
+Enemy1_Rework_C.Tags=True
+Enemy1_Rework_C.Replication=True
+Enemy1_Rework_C.ComponentReplication=True
+Enemy1_Rework_C.Activation=True
+Enemy1_Rework_C.Cooking=True
+Enemy1_Rework_C.Navigation=True
+Enemy1_Rework_C.AssetUserData=True
+Enemy1_Rework_C.Variable=True
+Enemy1_Rework_C.Character Movement (General Settings)=True
+Enemy1_Rework_C.Character Movement: Walking=True
+Enemy1_Rework_C.Character Movement: Jumping / Falling=True
+Enemy1_Rework_C.Character Movement: Gravity=True
+Enemy1_Rework_C.Character Movement (Networking)=True
+Enemy1_Rework_C.Character Movement: Swimming=True
+Enemy1_Rework_C.Character Movement: Flying=True
+Enemy1_Rework_C.Character Movement: Custom Movement=True
+Enemy1_Rework_C.Character Movement (Rotation Settings)=True
+Enemy1_Rework_C.Character Movement: Physics Interaction=True
+Enemy1_Rework_C.Character Movement=True
+Enemy1_Rework_C.Character Movement: Avoidance=True
+Enemy1_Rework_C.RootMotion=True
+Enemy1_Rework_C.Character Movement: NavMesh Movement=True
+Enemy1_Rework_C.Velocity=True
+Enemy1_Rework_C.PlanarMovement=True
+Enemy1_Rework_C.MovementComponent=True
+Enemy1_Rework_C.NavMovement=True
+Enemy1_Rework_C.Shape=True
+Enemy1_Rework_C.Character=True
+Enemy1_Rework_C.Camera=True
+Enemy1_Rework_C.Pawn=True
+Enemy1_Rework_C.Actor=True
+Enemy1_Rework_C.Input=True
+Enemy1_Rework_C.Events=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Variable=True
+Bullet_C.Pawn=True
+Bullet_C.Tick=True
+Bullet_C.Camera=True
+Bullet_C.Replication=True
+Bullet_C.Rendering=True
+Bullet_C.Actor=True
+Bullet_C.HLOD=True
+Bullet_C.Collision=True
+Bullet_C.Input=True
+Bullet_C.Physics=True
+Bullet_C.Events=True
+BehaviorTreeGraphNode_Root.AI=True
+K2Node_SetFieldsInStruct.PinOptions=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.Events=True
+AIPerceptionComponent.Replication=True
+AIPerceptionComponent.AssetUserData=True
+AIPerceptionComponent.Navigation=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/MainmenuMap
-MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/Saves/Settingsave
-MRUItem3=/Game/Audio/Master
-MRUItem4=/Game/Audio/MasterSoundclassMIx
-MRUItem5=/Game/Audio/SFX/click-345983
-MRUItem6=/Game/UI/Button_menu
-MRUItem7=/Game/Audio/Music/MasterMusic_Soundclass
-MRUItem8=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
-MRUItem9=/Game/UI/OptionsMenuWB
-MRUItem10=/Game/UI/ExitOptions
-MRUItem11=/Game/Maps/Enemy1
-MRUItem12=/Game/UI/LevelSelectMenuWidget
-MRUItem13=/Game/UI/UI_assets/Button_arrow
-MRUItem14=/Game/UI/UI_assets/RotF_logo_1_
-MRUItem15=/Engine/EngineFonts/Roboto
-MRUItem16=/Game/StarterContent/Maps/Minimal_Default
-MRUItem17=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem18=/Game/StarterContent/Maps/StarterMap
-MRUItem19=/Game/UI/WBP_Layer
-MRUItem20=/Game/Maps/Test
-MRUItem21=/Game/Blueprints/BF_FPS_Character
-MRUItem22=/Game/Maps/Player
-MRUItem23=/Game/Maps/NewMap_backup_HLOD0_Instancing
-MRUItem24=/Game/Maps/NewMap_backup
-MRUItem25=/Game/Maps/NewMap
-MRUItem26=/Game/Blueprints/Doors/BP_P2_DoorHalf
-MRUItem27=/Game/Blueprints/Doors/BP_P2_Door
-MRUItem28=/Game/Blueprints/Doors/BP_P_Door
-MRUItem29=/Game/Blueprints/Doors/BP_P_DoorHalf
+MRUItem0=/Game/Blueprints/Enemy1_Rework
+MRUItem1=/Game/Maps/Enemy1
+MRUItem2=/Game/Blueprints/BT_NPC
+MRUItem3=/Game/Blueprints/Bullet
+MRUItem4=/Game/Maps/MainmenuMap
+MRUItem5=/Game/UI/MainMenu
+MRUItem6=/Game/Saves/Settingsave
+MRUItem7=/Game/Audio/Master
+MRUItem8=/Game/Audio/MasterSoundclassMIx
+MRUItem9=/Game/Audio/SFX/click-345983
+MRUItem10=/Game/UI/Button_menu
+MRUItem11=/Game/Audio/Music/MasterMusic_Soundclass
+MRUItem12=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
+MRUItem13=/Game/UI/OptionsMenuWB
+MRUItem14=/Game/UI/ExitOptions
+MRUItem15=/Game/UI/LevelSelectMenuWidget
+MRUItem16=/Game/UI/UI_assets/Button_arrow
+MRUItem17=/Game/UI/UI_assets/RotF_logo_1_
+MRUItem18=/Engine/EngineFonts/Roboto
+MRUItem19=/Game/StarterContent/Maps/Minimal_Default
+MRUItem20=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem21=/Game/StarterContent/Maps/StarterMap
+MRUItem22=/Game/UI/WBP_Layer
+MRUItem23=/Game/Maps/Test
+MRUItem24=/Game/Blueprints/BF_FPS_Character
+MRUItem25=/Game/Maps/Player
+MRUItem26=/Game/Maps/NewMap_backup_HLOD0_Instancing
+MRUItem27=/Game/Maps/NewMap_backup
+MRUItem28=/Game/Maps/NewMap
+MRUItem29=/Game/Blueprints/Doors/BP_P2_DoorHalf
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -3259,7 +3344,7 @@ PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.AI Perception.SensesConfig\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3273,7 +3358,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.AI Perception.SensesConfig\" "
 MainMenu_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3282,7 +3367,7 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 OptionsMenuWB_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
-K2Node="\"Object\" \"Object.PinOptions.PinNames\" "
+K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
@@ -3464,6 +3549,13 @@ SoundClass="\"Object\" "
 Settingsave_C="\"Object\" "
 SaveGame="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" "
+BehaviorTreeGraphNode_Root="\"Object\" "
+BehaviorTreeGraphNode="\"Object\" "
+AIGraphNode="\"Object\" "
+K2Node_SetFieldsInStruct="\"Object\" "
+K2Node_MakeStruct="\"Object\" "
+K2Node_StructMemberSet="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3492,6 +3584,10 @@ EdGraphNode_Comment="\"Object\" "
 /Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME.relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME=1
 /Game/Audio/Music/MasterMusic_Soundclass.MasterMusic_Soundclass=1
 /Game/Audio/Master.Master=1
+/Game/Blueprints/Enemy1_Rework.Enemy1_Rework=1
+/Game/Blueprints/Bullet.Bullet=1
+/Game/Blueprints/BT_NPC.BT_NPC=1
+/Game/Blueprints/BB_NPC.BB_NPC=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3516,8 +3612,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3595,7 +3691,7 @@ CustomFavorites=(FieldName="Gamepad_Left2D",NodeName="/Script/BlueprintGraph.K2N
 CurrentProfile=CustomProfile
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [SelectionDetails]
 PreserveScaleRatio=True
