--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -417,12 +417,12 @@ Bullet_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueC
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/Enemy1
+LastLevel=/Engine/Maps/Templates/OpenWorld
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -454,6 +454,7 @@ RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/Blueprints/Enemy1_Rework.Enemy1_Rework
 
 [RootWindow]
 ScreenPosition=X=272.000 Y=240.000
@@ -3659,7 +3660,7 @@ PawnSensingComponent="\"Object\" "
 /Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME.relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME=1
 /Game/Audio/Music/MasterMusic_Soundclass.MasterMusic_Soundclass=1
 /Game/Audio/Master.Master=1
-/Game/Blueprints/Enemy1_Rework.Enemy1_Rework=1
+/Game/Blueprints/Enemy1_Rework.Enemy1_Rework=0
 /Game/Blueprints/Bullet.Bullet=1
 /Game/Blueprints/BT_NPC.BT_NPC=1
 /Game/Blueprints/BB_NPC.BB_NPC=1
@@ -3688,8 +3689,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
