--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -424,12 +424,12 @@ CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.Font,PropertyWra
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/Enemy1
+LastLevel=/Engine/Maps/Templates/OpenWorld
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -461,7 +461,6 @@ RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/Blueprints/Enemy1_Rework.Enemy1_Rework
 
 [RootWindow]
 ScreenPosition=X=272.000 Y=240.000
