--- a/project/Config/DefaultEngine.ini
+++ b/project/Config/DefaultEngine.ini
@@ -116,3 +116,15 @@ SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=T
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot1=One
+CategorySlot0=Zero
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
+
