Small stuff idk

--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -638,11 +638,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
@@ -652,10 +648,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Blueprints/BF_FPS_Character.BF_FPS_Character
-OpenAssetsAtExit=/Game/UI/PlayerUi/MainHud.MainHud
-OpenAssetsAtExit=/Game/UI/PlayerUi/WP_DashStaminaBar.WP_DashStaminaBar
-OpenAssetsAtExit=/Game/UI/PlayerUi/M_DashStaminaBar.M_DashStaminaBar
 
 [RootWindow]
 ScreenPosition=X=253.000 Y=96.000
@@ -2137,7 +2129,10 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_assets
+ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Shapes
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Textures
@@ -2146,14 +2141,11 @@ ContentBrowserTab1.JumpMRU=/All/Game/Modern_House_V1/Mesh
 ContentBrowserTab1.JumpMRU=/All/Game/Modern_House_V1/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/Modern_House_V1/Blueprint
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
-ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game/Material
 ContentBrowserTab1.JumpMRU=/All/Game/MetroMaintenanceStation
 ContentBrowserTab1.JumpMRU=/All/Game/Maps
-ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/Characters
 ContentBrowserTab1.JumpMRU=/All/EngineData
-ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_assets
 ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserTab1.JumpMRU=/All/Game/Audio
 ContentBrowserTab1.JumpMRU=/All/Game/Assets
@@ -4155,20 +4147,16 @@ MRUItem12=/Game/Blueprints/Win_brick
 MRUItem13=/Game/Material/M_Portal_Earth
 MRUItem14=/Game/Blueprints/BP_ThirdPersonCharacter
 MRUItem15=/Game/Maps/NewMap
-MRUItem16=/Game/Maps/EnemyAI
-MRUItem17=/Game/StarterContent/Materials/Beige
-MRUItem18=/Game/Blueprints/Animation/ABP_Character
-MRUItem19=/Game/Blueprints/Animation/AMS_Katana_AttackNotify
-MRUItem20=/Game/Maps/NewMap_backup
-MRUItem21=/Game/Maps/Untitled
-MRUItem22=/Game/Maps/Enemy1
-MRUItem23=/Game/Modern_House_V1/Mesh/SM_Lamp_1
-MRUItem24=/Game/Modern_House_V1/Mesh/SM_Table_3
-MRUItem25=/Game/Modern_House_V1/Mesh/SM_Counter_1
-MRUItem26=/Game/Modern_House_V1/Mesh/SM_kitchen
-MRUItem27=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_8
-MRUItem28=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_7
-MRUItem29=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_6
+MRUItem16=/Game/StarterContent/Materials/Beige
+MRUItem17=/Game/Maps/NewMap_backup
+MRUItem18=/Game/Maps/Enemy1
+MRUItem19=/Game/Modern_House_V1/Mesh/SM_Lamp_1
+MRUItem20=/Game/Modern_House_V1/Mesh/SM_Table_3
+MRUItem21=/Game/Modern_House_V1/Mesh/SM_Counter_1
+MRUItem22=/Game/Modern_House_V1/Mesh/SM_kitchen
+MRUItem23=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_8
+MRUItem24=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_7
+MRUItem25=/Game/Modern_House_V1/Mesh/SM_kitchen_Door_6
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -4286,7 +4274,7 @@ PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -4732,8 +4720,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
