--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -620,12 +620,12 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -2102,7 +2102,7 @@ ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/PlayerTestMap
 ContentBrowserDrawer.JumpMRU========
-ContentBrowserTab1.SelectedPaths=/Game/UI/PlayerUi
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -2129,8 +2129,8 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_assets
 ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Materials
@@ -4131,10 +4131,10 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/PlayerUi/M_DashStaminaBar
-MRUItem1=/Game/UI/PlayerUi/M_DashStaminaBar_Inst
-MRUItem2=/Game/Blueprints/BF_FPS_Character
-MRUItem3=/Game/UI/PlayerUi/WP_DashStaminaBar
+MRUItem0=/Game/Blueprints/BF_FPS_Character
+MRUItem1=/Game/UI/PlayerUi/WP_DashStaminaBar
+MRUItem2=/Game/UI/PlayerUi/M_DashStaminaBar
+MRUItem3=/Game/UI/PlayerUi/M_DashStaminaBar_Inst
 MRUItem4=/Game/UI/PlayerUi/MainHud
 MRUItem5=/Game/Maps/NewMapDecorated
 MRUItem6=/Game/Maps/MainmenuMap
@@ -4271,10 +4271,10 @@ bNavigationToolVisible=False
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -4720,8 +4720,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
