--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -640,14 +640,14 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
@@ -2173,11 +2173,19 @@ ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.JumpMRU=/All/Game/Maps
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Props
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Particles
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Textures
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Shapes
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/Modern_House_V1/Mesh
 ContentBrowserTab1.JumpMRU=/All/Game/Modern_House_V1
 ContentBrowserTab1.JumpMRU=/All/Game/MetroMaintenanceStation
-ContentBrowserTab1.JumpMRU=/All/Game/UI
+ContentBrowserTab1.JumpMRU=/All/Game/Material
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/Characters
+ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_assets
 ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/UI/Fonts
@@ -2188,15 +2196,12 @@ ContentBrowserTab1.JumpMRU=/All/Game/Audio/SFX
 ContentBrowserTab1.JumpMRU=/All/Game/Audio
 ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserTab1.JumpMRU=/All/Game/Input
-ContentBrowserTab1.JumpMRU=/All/Game/Characters
 ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Audio
 ContentBrowserTab1.JumpMRU=/Game
 ContentBrowserTab1.JumpMRU=/All/Game/UI/Font
 ContentBrowserTab1.JumpMRU=/All/Game/UI/Almendra
-ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Maps
-ContentBrowserTab1.JumpMRU=/All
 AssetDialog.ThumbnailSizeGrid=3
 AssetDialog.ThumbnailSizeList=3
 AssetDialog.ThumbnailSizeCustom=3
