--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2080,7 +2080,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/Control
 RecentsFiles=F:/Unreal5/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Audio/SFX
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -2109,22 +2109,26 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets
-ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Mannequins
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/SFX
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Characters
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
-ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Audio/SFX
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps
-ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/Input
+ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/Material
+ContentBrowserDrawer.JumpMRU=/All/Game/MetroMaintenanceStation
+ContentBrowserDrawer.JumpMRU=/All/Game/Modern_House_V1
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Mannequins
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Characters
+ContentBrowserDrawer.JumpMRU=
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets/SFX
+ContentBrowserDrawer.JumpMRU=/Game
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tasks
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Doors
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Mixamo_Animations/rifle
@@ -2135,10 +2139,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Mixamo_Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Player
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons/Player_FPS_Weapon/Katana/Materials
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons/Player_FPS_Weapon/Katana/Animations
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons/Player_FPS_Weapon/Katana
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Weapons/Player_FPS_Weapon
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/DamageSystem
 ContentBrowserTab1.SelectedPaths=/Game/UI/PlayerUi
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
