--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -641,12 +641,12 @@ K2Node_SwitchName=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.Defa
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/EnemyBaseAI
+LastLevel=/Engine/Maps/Templates/OpenWorld
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=AnimationEditor
@@ -677,8 +677,6 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/BF_FPS_Character.BF_FPS_Character
-OpenAssetsAtExit=/Game/Blueprints/Enemies/EnemyBase/BP_Enemy_Base.BP_Enemy_Base
 
 [RootWindow]
 ScreenPosition=X=1947.000 Y=-176.000
